# parismove-ai

./: -files  grep coach  .gitignore  CONTRIBUTING.md  README.md  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  ingestion.yml
.streamlit/: config.toml
docs/architecture/: ADR-001-stockage.md  ADR-002-database-driver.md  ADR-003-star-schema-enrichment.md  ADR-004-health-score-design.md  ADR-005-coach-rag-architecture.md  ADR-006-ingestion-robustness.md  ADR-007-dashboard-streamlit.md  ADR-008-dashboard-traffic-health.md
infrastructure/: .env.example
infrastructure/migrations/: 001_create_stop_visits.sql  002_create_air_measurements.sql  003_create_weather_observations.sql  004_create_idfm_lines.sql  005_cleanup_parasitic_air_measurements.sql  README.md
services/coach/: pyproject.toml
services/coach/src/coach/: __init__.py  cli.py  config.py  intent.py  llm.py  orchestrator.py  prompts.py  tools.py
services/coach/tests/: test_intent.py  test_orchestrator.py  test_tools.py
services/dashboard/: README.md  pyproject.toml  requirements.txt
services/dashboard/src/dashboard/: __init__.py  app.py  config.py  data.py  theme.py
services/dashboard/src/dashboard/pages/: 1_Qualite_de_l_air.py  2_Coach_IA.py  3_Trafic.py  4_Score_sante.py
services/dashboard/tests/: test_coach_page.py  test_data_helpers.py  test_pages_traffic_health.py
services/healthscore/: pyproject.toml
services/healthscore/src/healthscore/: __init__.py  cli.py  compare.py  data_access.py  exposure.py  pollution.py  scoring.py  traffic.py  weather.py
services/healthscore/tests/: test_exposure.py  test_pollution.py  test_scoring.py  test_traffic.py  test_weather.py
services/ingestion/: README.md  pyproject.toml
services/ingestion/src/ingestion/: __init__.py  cli.py  config.py
services/ingestion/src/ingestion/clients/: __init__.py  aqicn.py  meteo.py  prim.py
services/ingestion/src/ingestion/loaders/: __init__.py  aqicn_loader.py  meteo_loader.py  postgres.py
services/ingestion/src/ingestion/reference/: __init__.py  idfm_loader.py
services/ingestion/src/ingestion/scripts/: __init__.py  discover_aqicn_stations.py
services/ingestion/src/ingestion/transformers/: __init__.py  aqicn_transformer.py  meteo_transformer.py  prim_transformer.py
services/ingestion/tests/: test_aqicn_client.py  test_aqicn_loader.py  test_aqicn_transformer.py  test_idfm_loader.py  test_lookups.py  test_meteo_client.py  test_meteo_loader.py  test_meteo_transformer.py  test_postgres_loader.py  test_prim_client.py  test_prim_transformer.py
services/ingestion/tests/fixtures/: aqicn_paris.json  aqicn_paris_feed.json  idfm_referentiel.json  openmeteo_air_quality.json  openmeteo_forecast.json  prim_stop_monitoring.json
shared/: pyproject.toml
shared/src/shared/: __init__.py
shared/src/shared/db/: __init__.py  engine.py  lookups.py
shared/src/shared/schemas/: __init__.py  air.py  health.py  mobility.py  weather.py
