[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parismove-shared"
version = "0.1.0"
description = "Schémas Pydantic et utilitaires partagés"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]